# fedi_select_bot

./: README.md  pyproject.toml  selectbot.py
